# obs-transition-matrix

./: .gitignore  CMakeLists.txt  README.md  obs-transition-matrix-dialog.cpp  obs-transition-matrix-dialog.hpp  obs-transition-matrix-model.cpp  obs-transition-matrix-model.hpp  obs-transition-matrix.cpp  obs-transition-matrix.hpp
CI/macos/: obs-transition-matrix.pkgproj
data/locale/: en-US.ini
